apps/raw/dev/payments-backend-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neon-billboard
  namespace: payments-backend-dev
  labels:
    app.kubernetes.io/name: neon-billboard
    naas.io/team: payments
    naas.io/env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: neon-billboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: neon-billboard
        naas.io/team: payments
        naas.io/env: dev
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101   # nginx in alpine
        fsGroup: 101
      containers:
        - name: neon-billboard
          image: ghcr.io/naastest/neon-billboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
