apps/raw/dev/payments-backend-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neon-billboard
  namespace: payments-backend-dev
  labels:
    app.kubernetes.io/name: neon-billboard
    naas.io/team: payments
    naas.io/env: dev
spec:
  selector:
    app.kubernetes.io/name: neon-billboard
  ports:
    - port: 80
      targetPort: 8080
